--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   scroll-behavior: smooth;
 } */
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
-} */
+}
+
+body {
+  background-color: #424874;
+}
